[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mothman"
author = "Ong Yong Xin"
author-email = "ongyongxin2020+github@gmail.com"
home-page = "https://github.com/ongyx/mothman"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]
description-file = "README.md"
requires = [
    "arpy>=1.1.1",
    "click>=7.1.2",
    "six<2.0.0",
]
requires-python = ">=3.6"

[tool.flit.scripts]
mothman = "mothman.cli:cli"

[tool.flit.metadata.requires-extra]
dsc = [
    "PGPy>=0.4.1",
]
